classification
Title: PyUnicode_CompareWithASCIIString name is not mangled (UCS2, UCS4)
Type: Stage:
Components: Unicode Versions: Python 3.2
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: haypo, loewis
Priority: normal Keywords: patch

Created on 2010-05-18 23:50 by haypo, last changed 2010-10-24 20:38 by haypo. This issue is now closed.

Files
File name Uploaded Description Edit
pyunicode_compareascii.patch haypo, 2010-05-18 23:50 review
Messages (3)
msg106015 - (view) Author: STINNER Victor (haypo) * (Python committer) Date: 2010-05-18 23:50
In unicodeobject.h, you can see:

# define PyUnicode_CompareWithASCII PyUnicodeUCS2_CompareASCII
...
# define PyUnicode_CompareWithASCII PyUnicodeUCS4_CompareWithASCII
...
PyAPI_FUNC(int) PyUnicode_CompareWithASCIIString(
    PyObject *left,
    const char *right
    );

The defines miss the String suffix :-/

Attached patch adds the suffix but I guess that it breaks backward compatibility. Is it a problem to apply this patch in Python 3.2 (but not in Python 3.1)?
msg106039 - (view) Author: Martin v. Löwis (loewis) * (Python committer) Date: 2010-05-19 06:23
It's fine to apply to 3.2.
msg119529 - (view) Author: STINNER Victor (haypo) * (Python committer) Date: 2010-10-24 20:38
Fixed by r85827.
History
Date User Action Args
2010-10-24 20:38:50hayposetstatus: open -> closed
resolution: accepted -> fixed
messages: + msg119529
2010-05-19 06:23:59loewissetresolution: accepted

messages: + msg106039
nosy: + loewis
2010-05-18 23:50:21haypocreate