Issue #8761: Mangle PyUnicode_CompareWithASCIIString function name for narrow/wide unicode build.