Include/unicodeobject.h
@@ -159,7 +159,7 @@ typedef PY_UNICODE_TYPE Py_UNICODE;
 # define PyUnicode_AsWideCharString PyUnicodeUCS2_AsWideCharString
 # define PyUnicode_ClearFreeList PyUnicodeUCS2_ClearFreelist
 # define PyUnicode_Compare PyUnicodeUCS2_Compare
-# define PyUnicode_CompareWithASCII PyUnicodeUCS2_CompareASCII
+# define PyUnicode_CompareWithASCIIString PyUnicodeUCS2_CompareWithASCIIString
 # define PyUnicode_Concat PyUnicodeUCS2_Concat
 # define PyUnicode_Append PyUnicodeUCS2_Append
 # define PyUnicode_AppendAndDel PyUnicodeUCS2_AppendAndDel
@@ -243,7 +243,7 @@ typedef PY_UNICODE_TYPE Py_UNICODE;
 # define PyUnicode_AsWideCharString PyUnicodeUCS4_AsWideCharString
 # define PyUnicode_ClearFreeList PyUnicodeUCS4_ClearFreelist
 # define PyUnicode_Compare PyUnicodeUCS4_Compare
-# define PyUnicode_CompareWithASCII PyUnicodeUCS4_CompareWithASCII
+# define PyUnicode_CompareWithASCIIString PyUnicodeUCS4_CompareWithASCIIString
 # define PyUnicode_Concat PyUnicodeUCS4_Concat
 # define PyUnicode_Append PyUnicodeUCS4_Append
 # define PyUnicode_AppendAndDel PyUnicodeUCS4_AppendAndDel
